--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "elasticsearch": "^15.3.1",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.4.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.4",
     "sequelize": "^4.42.0"
