--- a/.ebextensions/node-settings.config
+++ b/.ebextensions/node-settings.config
@@ -1,6 +1,7 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:
     NodeCommand: "npm start"
+    NodeVersion: 10.10.0
 
   aws:elasticbeanstalk:application:environment:
     PORT: 80
